# pofyz

./: CMakeLists.txt
2020_LS/: CMakeLists.txt
2020_LS/cvicenie_05_2/: CMakeLists.txt  constants.h  main.c  parameterTables.c  parameterTables.h
2020_LS/cvicenie_05_2/core/: error.c  error.h  exit.c  parse.h  toStr.h  vector.h
2020_LS/cvicenie_05_2/solvers/: euler.c
2020_LS/zadanie_A/: CMakeLists.txt  acceleration.c  analytical.h  constants.h
2020_LS/zadanie_A/solvers/: euler.c  euler.h  rungeKutta.h
2020_LS/zadanie_A2/: CMakeLists.txt  acceleration.c  analytical.c  arguments.c  arguments.h  constants.c  constants.h  main.c  parameters.h  utility.c  utility.h
2020_LS/zadanie_A2/core/: output.c  output.h  parse.c  vector.c  vector.h
2020_LS/zadanie_A2/equations/: acceleration.c  acceleration.h  analytical.c  analytical.h  velocity.h
2020_LS/zadanie_A2/solvers/: euler.c  euler.h  rungeKutta.c  rungeKutta.h  statistics.c  statistics.h
2020_LS/zadanie_A3/: CMakeLists.txt  arguments.c  arguments.h  constants.c  constants.h  main.c  parameterTables.c
2020_LS/zadanie_A3/arguments/: arguments.c  arguments.h  argumentsTable.c  argumentsTable.h  dataFileTables.c  dataFileTables.h  dataFiles.h  dumpArguments.c  dumpArguments.h  intOptionTables.c  intOptionTables.h  intOptions.h  optionTables.c  optionTables.h  options.h  parameterTables.c  parameterTables.h  parameters.h  printUsage.c  printUsage.h  stringOptionTables.c  stringOptionTables.h  stringOptions.h
2020_LS/zadanie_A3/arguments/arguments/: intOptions.h  parameters.h  stringOptions.h
2020_LS/zadanie_A3/arguments/tables/: argumentsTable.c  argumentsTable.h  intOptionTables.c  intOptionTables.h  parameterTables.c  parameterTables.h  stringOptionTables.c  stringOptionTables.h
2020_LS/zadanie_A3/core/: error.h  exit.c  exit.h  file.c  file.h  matrix.c  matrix.h  matrixOperations.c  matrixOperations.h  output.c  output.h  parse.c  parse.h  rootPath.c  rootPath.h  swap.h  toStr.h  vector.c  vector.h
2020_LS/zadanie_A3/data/: temperature.c  temperature.h  temperature.txt
2020_LS/zadanie_A3/equations/: acceleration.c  acceleration.h  dynamics.c  dynamics.h  general.c  general.h  polynomial.c  polynomial.h
2020_LS/zadanie_A3/equations/simulation/: acceleration.c  acceleration.h  dynamics.c  dynamics.h  velocity.c  velocity.h
2020_LS/zadanie_A3/solvers/: euler.c  euler.h  integrateRiemannSum.c  integrateRiemannSum.h  linearEquationSystem.c  linearEquationSystem.h  linearLeastSquares.c  linearLeastSquares.h  linearLupDecompose.c  linearLupDecompose.h  linearLupNormalize.c  linearLupNormalize.h  linearLupSolve.c  linearLupSolve.h  rungeKutta.c  rungeKutta.h  solveGeneric.c  solveGeneric.h  statistics.c  statistics.h
2020_LS/zadanie_A3/solvers/linear/: linearEquationSystem.c  linearEquationSystem.h  linearLeastSquares.c  linearLeastSquares.h  linearLupDecompose.c  linearLupDecompose.h  linearLupNormalize.c  linearLupNormalize.h  linearLupSolve.c  linearLupSolve.h
2020_LS/zadanie_A3/solvers/simulation/: euler.c  euler.h  rungeKutta.c  rungeKutta.h  solveGeneric.c  solveGeneric.h  statistics.c  statistics.h
